# nvim-rs

./: Cargo.toml
api_gen/: Cargo.toml
api_gen/src/: api.rs  main.rs
nvim_client/: Cargo.toml
nvim_client/src/: main.rs
nvim_client_api/: Cargo.toml
nvim_client_api/src/: api_autogen.rs  lib.rs
