[package]
name = "api_gen"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]

[dependencies]
clap = "2.31"
failure = "0.1"
futures = "0.1"
itertools = "0.7"
rmp-rpc = { git = "https://github.com/jneem/rmp-rpc" }
rmp-serde = "0.13"
rmpv = "0.4"
serde = "1.0"
serde_derive = "1.0"
tokio-io = "0.1"

