[package]
name = "nvim_client_api"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]

[dependencies]
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
itertools = "0.7"
rmp-rpc = "0.2"
rmp-serde = "0.13"
rmpv = "0.4"
serde = "1.0"
serde_derive = "1.0"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-uds = "0.1"
